# flutterweb_wasm

./: .gitignore  README.md  clipper.dart  fixed_third_section.txt  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  pubspec.yaml  version.json
.dart_tool/: package_config.json  package_config_subset
.dart_tool/chrome-device/Default/: BrowsingTopicsState  DIPS  History  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/1c742b524c0f125026e4d1b88b7daf91/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  flutter_assets.d  main.dart  main.dart.js.deps  outputs.json  service_worker.d  web_entrypoint.stamp  web_release_bundle.stamp  web_resources.d  web_service_worker.stamp  web_static_assets.stamp  web_templated_files.stamp
.github/workflows/: gh-pages.yml
docs/: flutter_bootstrap.js  flutter_service_worker.js  main.dart.js
docs/pkg/: rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.wasm.d.ts
lib/: child_widget.dart  child_widget_t.dart  fixed_second_section.dart  fixed_third_section.dart  fixed_top_section.dart  main.dart  main1.dart  main2.dart  mainok.dart  mainsample.dart  test.dart
pkg/: rust_wasm_bg.wasm  rust_wasm_bg.wasm.d.ts
rust/: Cargo.toml
rust/src/: lib.rs  libcors.rs  libmain.rs  liborg.rs  simple.rs
test/: widget_test.dart
web/: flutter_bootstrap.js  flutter_service_worker.js  index.html  manifest.json
web/assets/: NOTICES
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+34 files in other folders)
