[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlDocument", "HtmlElement", "Element", "Node", 
    "Request", "RequestInit", "RequestMode", "Response","DomParser","NodeList"
] }
wasm-bindgen-futures = "0.4"  # 追加する
serde = { version = "1.0", features = ["derive"] }  # 追加する
scraper = "0.12"  # 追加する
serde_json = "1.0"  # 追加する
wasm-logger = "0.2"
js-sys = "0.3"  # 必要ならば
serde-wasm-bindgen = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }